Cloudinary service commit

--- a/Views/Dashboard/ChangePassword.cshtml
+++ b/Views/Dashboard/ChangePassword.cshtml
@@ -8,10 +8,9 @@
     </div>
 </div>
 <div class="RYTS-16-auth-container">
-    <div class="RYTS-16-options">
-        <p class="RYTS-16-auth-options-edit"><a asp-action="editProfile">Edit Profile</a></p>
-        <p class="RYTS-16-auth-options-edit"><a asp-action="changePassword">Change Password</a></p>
-    </div>
+
+    <Partial name="_NavEditProfilePartial" />
+
     <div class="RYTS-16-auth-form-area">
         <link href="c:\users\decagon\source\repos\ryt\ryt\wwwroot\css\changepasswordforstudent.css" rel="stylesheet" />
         <div class="RYTS-16-auth-form-details">
