--- a/Views/Dashboard/EditProfile.cshtml
+++ b/Views/Dashboard/EditProfile.cshtml
@@ -10,10 +10,9 @@
             </div>
     </div>
    <div class="babs-container">
-       <div class="options">
-            <p class="babs-options-edit"><a asp-action="editProfile">Edit Profile</a></p>
-            <p class="babs-options-edit"><a asp-action="changePassword">Change Password</a></p>
-       </div>
+
+        <Partial name="_NavEditProfilePartial" />
+
        <div class="babs-form-area">
             <div class="babs-form-details">
                 <P class="babs-edit">Edit Profile</P>
