--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -25,6 +25,7 @@
     <link rel="stylesheet" type="text/css" href="~/css/teacher_signup.css" />
     <link rel="stylesheet" href="~/css/TeacherLogin.css?v6" />
     <link rel="stylesheet" href="~/css/Login.css?v6" />
+    <link rel="stylesheet" href="~/css/RYTS-10-Setting-Logout-Appreciation-Modal.css" />
 </head>
 <body>
   
