--- a/wwwroot/css/student-profile-edit.css
+++ b/wwwroot/css/student-profile-edit.css
@@ -1,8 +1,8 @@
 ﻿
 .rectangle {
-    margin-left: 85px;
+    margin-left: 75px;
     margin-right: 186px;
-    margin-top: 40px;
+    margin-top: 10px;
     position: relative;
     
     
@@ -41,15 +41,15 @@
     display: flex;
     width: 880px;
     margin-left: 85px;
-    margin-top: 20px;
+    margin-top: 15px;
 }
 
 .options{
     background:white;
     width: auto;
-    height: 96px;
+    height: 120px;
     margin-right:20px;
-    padding: 16px;
+    padding: 10px;
 }
 
 .babs-options-edit a {
@@ -71,7 +71,7 @@
 .babs-form-details {
     width: 478px;
     height:566px;
-    margin-left: 60px;
+    margin-left: 20px;
 }
 
 .babs-form-items {
@@ -108,6 +108,27 @@
         border-radius: 6px;
         background: #6938EF;
 }
+
+.babs-form-items-photo button {
+    margin-top: 20px;
+    width: 100%;
+    height: 44px;
+    padding: 12px, 16px, 12px, 16px;
+    border-radius: 6px;
+    background: #6938EF;
+    border: none;
+}
+
+.babs-form-area .card {
+    height: auto;
+    width: 300px;
+}
+
+.babs-form-items-photo input {
+    margin-top: 50px;
+}
+
+
 .save-button {
     font:'Inter';
     font-size:14px;
