--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -42,7 +42,7 @@
                     </form>
                     
                 </div>
-                <a asp-action=""><span class="RYTS-19-forgot-password">Forgot password?</span></a>
+                <a asp-action="ForgotPassword" asp-controller="Account"><span class="RYTS-19-forgot-password">Forgot password?</span></a>
             </div>
             <div class="RYTS-19-frame-d">
                 
