--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -5,6 +5,7 @@
 }
 
 <div class="RYTS-19-main-container RYTS-19-main-19">
+   <a asp-action="index" asp-controller="home">
     <div class="RYTS-19-frame-1">
         <div class="RYTS-19-frame-2">
         </div>
@@ -12,6 +13,7 @@
             <span class="RYTS-19-ryt">RYT</span><span class="RYTS-19-reward-your-teacher">Reward your Teacher</span>
         </div>
     </div>
+    </a>
     <div class="RYTS-19-frame-4">
         <div class="RYTS-19-frame-5">
             <div class="RYTS-19-frame-6">
