--- a/Views/Account/TeacherSignUp.cshtml
+++ b/Views/Account/TeacherSignUp.cshtml
@@ -5,8 +5,9 @@
 
 <div class="ryts-11-container-main">
     <div class="ryts-11-container py-5">
-
+        <a asp-action="index" asp-controller="home">
         <div class="ryts-11-logo-container"><img src="~/Images/ryts-11-RewardYourTeacherLogo.svg" alt=""></div>
+        </a>
         <div class="ryts-11-form">
             <div class="ryts-11-sign-up">
                 <div class="ryts-11-title">
