--- a/Views/Dashboard/Overview.cshtml
+++ b/Views/Dashboard/Overview.cshtml
@@ -1,7 +1,6 @@
 ﻿@{
     ViewData["Title"] = "Overview";
 }
-
 <div class="ryts-9-container-RYTS-9">
     <div class="ryts-9-welcome-panel">
         <div id="ryts-9-greeting-area">
@@ -65,19 +64,19 @@
                     <td class="ryts-9-you-sent">Olajumoke sent you a reward</td>
                     <td class="ryts-9-n-21">N15,000</td>
                     <td class="ryts-9-date-time-22">4/08/2022 - 4:45pm</td>
-                    <td class="ryts-9-view-profile"><a id="ryts-9-view-profile-color" href="#">View profile</a></td>
+                    <td data-bs-target="#profile" data-bs-toggle="modal" class="ryts-9-view-profile"><a id="ryts-9-view-profile-color" href="#">View profile</a></td>
                 </tr>
                 <tr class="ryts-9-frame-24">
                     <td class="ryts-9-you-sent-25">Obinna sent you a reward</td>
                     <td class="ryts-9-n-21">N10,000</td>
                     <td class="ryts-9-date-time-22">10/06/2022 - 3:00pm</td>
-                    <td class="ryts-9-view-profile"><a id="ryts-9-view-profile-color" href="#">View profile</a></td>
+                    <td data-bs-target="#profile" data-bs-toggle="modal" class="ryts-9-view-profile"><a id="ryts-9-view-profile-color" href="#">View profile</a></td>
                 </tr>
                 <tr class="ryts-9-frame-24">
                     <td class="ryts-9-you-sent-25">You withdrew money from your wallet</td>
                     <td class="ryts-9-n-21">N35,000</td>
                     <td class="ryts-9-date-time-22">5/04/2022 - 1:45pm</td>
-                    <td class="ryts-9-view-profile"><a id="ryts-9-view-profile-color" href="#">View profile</a></td>
+                    <td data-bs-target="#profile" data-bs-toggle="modal" class="ryts-9-view-profile"><a id="ryts-9-view-profile-color" href="#">View profile</a></td>
                 </tr>
             </tbody>
         </table>
