--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -26,6 +26,7 @@
     <link rel="stylesheet" href="~/css/TeacherLogin.css?v6" />
     <link rel="stylesheet" href="~/css/Login.css?v6" />
     <link rel="stylesheet" href="~/css/RYTS-10-Setting-Logout-Appreciation-Modal.css" />
+    <link rel="stylesheet" href="~/css/StudentProfileModal-ryts-2.css" asp-append-version="true" />
 </head>
 <body>
   
