--- a/Views/Shared/_NavbarPartial.cshtml
+++ b/Views/Shared/_NavbarPartial.cshtml
@@ -61,6 +61,7 @@
     }
 
 </style>
+<Partial name="_ProfileDetailPartial" />
 
 <header>
     <nav class="navbar navbar-expand-lg" id="navbar_bg">
@@ -100,8 +101,8 @@
                                 <li class="nav-item active text-center" style="padding-right: 30px;">
                                     @if (!_signInManager.IsSignedIn(User))
                                     {
-                                        <a asp-action="signup" asp-controller="account">
-                                            <span class="ryt-padding ryt-button" style="background-color:#6938EF;color:white"> Get Started</span>
+                                        <a asp-action="login" asp-controller="account">
+                                            <span class="ryt-padding ryt-button" style="background-color:#6938EF;color:white">Log In</span>
                                         </a>                                    
 
                                     }
@@ -186,7 +187,7 @@
                 <div class="ryts-10-modal-settings">
                     <div class="ryts-10-">
                         <div class="ryts-10-settings-1">
-                            <a href="#">
+                            <a href="#" id="view-profile-btn">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" class="ryts-10-account-setting">
                                     <path fill-rule="evenodd" clip-rule="evenodd" d="M12.0001 12C9.33972 12 7.17733 9.84718 7.17733 7.19998C7.17733 4.55278 9.33972 2.39998 12.0001 2.39998C14.6605 2.39998 16.8229 4.55278 16.8229 7.19998C16.8229 9.84718 14.6605 12 12.0001 12ZM16.5313 12.8076C17.5228 12.0181 18.2875 10.9799 18.7474 9.79891C19.2073 8.61787 19.3461 7.33604 19.1497 6.08392C18.6733 2.93632 16.0429 0.417572 12.8665 0.0503722C8.48412 -0.457228 4.76652 2.93878 4.76652 7.19998C4.76652 9.46798 5.82252 11.4888 7.46892 12.8076C3.42252 14.3208 0.46812 17.874 0.00492011 22.6692C-0.0112751 22.8373 0.00780493 23.0071 0.0609321 23.1675C0.114059 23.3279 0.200069 23.4754 0.313462 23.6007C0.426855 23.7259 0.565134 23.826 0.719462 23.8948C0.87379 23.9636 1.04077 23.9994 1.20973 24C1.50588 24.0024 1.79224 23.8941 2.01267 23.6963C2.23311 23.4985 2.37172 23.2255 2.40132 22.9308C2.88492 17.5752 7.00452 14.4 12.0001 14.4C16.9957 14.4 21.1153 17.5752 21.5989 22.9308C21.6285 23.2255 21.7671 23.4985 21.9876 23.6963C22.208 23.8941 22.4944 24.0024 22.7905 24C23.5057 24 24.0625 23.3784 23.9941 22.6692C23.5321 17.874 20.5777 14.3208 16.5301 12.8076" fill="#6938EF" />
                                 </svg> Account
@@ -202,7 +203,7 @@
                         </div>
 
                         <div class="ryts-10-settings-3">
-                            <a asp-action="Logout" asp-controller="Account">
+                            <a href="#" id="view-logout-btn">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" class="ryts-10-logout-setting">
                                     <path d="M17 8L15.59 9.41L17.17 11H9V13H17.17L15.59 14.58L17 16L21 12L17 8ZM5 5H12V3H5C3.9 3 3 3.9 3 5V19C3 20.1 3.9 21 5 21H12V19H5V5Z" fill="#6938EF" />
                                 </svg> Logout
@@ -227,7 +228,7 @@
                     <hr class="ryts-10-hr-border-thickness">
                     <p class="ryts-10-are-you-sure">Are you sure you want to logout from your account?</p>
                     <div class="ryts-10-float-button-right">
-                        <a class="ryts-10-button-no">No</a>
+                        <a href="#" class="ryts-10-button-no" id="no-logout-btn">No</a>
                         <a asp-action="Logout" asp-controller="Account" class="ryts-10-button-yes">Yes</a>
                     </div>
                 </div>
