--- a/Views/Dashboard/Teachers.cshtml
+++ b/Views/Dashboard/Teachers.cshtml
@@ -12,7 +12,7 @@
     <a asp-action="sendReward" class="neo-arrow-back">
         <img class="neo-img" src="~/images/arrow-back.png" /> Go back
     </a>
-    <p class="neo-school-name">Teacher(s) - Mainland Senior High School</p>
+    <p class="neo-school-name">Teachers - @Model.SchoolName</p>
 
     @* Mainland Senior High School *@
 
@@ -65,13 +65,36 @@
     <div id="neo-pagination-panel">
         <a asp-action="Teachers" asp-route-page="@(Model.CurrentPage - 1) @prevDisabled" class="neo-previous-page"> Previous </a>
         <p>Page @Model.CurrentPage of @Model.TotalPages</p>
+        @if (Model.CurrentPage > 1)
+        {
+            <a asp-action="Teachers" asp-route-page="@(Model.CurrentPage - 1) @prevDisabled" class="neo-previous-page"> Previous </a>
+        }
+        else
+        {
+            <span style="cursor:pointer" class="neo-previous-page disabled">Previous</span>
+        }
+
         @if (Model.CurrentPage < Model.TotalPages)
         {
             <a asp-action="Teachers" asp-route-page="@(Model.CurrentPage + 1) @nextDisabled" class="neo-next-page"> Next </a>
         }
         else
         {
-            <span style="cursor:pointer" class="neo-next-page">Next</span>
+            <span style="cursor:pointer" class="neo-next-page disabled">Next</span>
         }
     </div>
+@* 
+    <div id="neo-pagination-panel">
+        @if (Model.CurrentPage > 1)
+        {
+            <a asp-action="SendReward" asp-route-page="@(Model.CurrentPage - 1)" asp-route-searchString="@ViewBag.SearchString">Previous</a>
+        }
+
+        <p class="page-numb">Page @Model.CurrentPage of @Model.TotalPages</p>
+
+        @if (Model.CurrentPage < Model.TotalPages && Model.schoolTeachers.Count == 5)
+        {
+            <a asp-action="SendReward" asp-route-page="@(Model.CurrentPage + 1)" asp-route-searchString="@ViewBag.SearchString">Next</a>
+        }
+    </div> *@
 </div>
