Querying data of teachers lists from the database

--- a/Views/Shared/_ProfileDetailPartial.cshtml
+++ b/Views/Shared/_ProfileDetailPartial.cshtml
@@ -1,4 +1,6 @@
-﻿@inject UserManager<AppUser> _userManager;
+﻿@using Microsoft.AspNetCore.Identity
+@using RYT.Models.Entities
+@inject UserManager<AppUser> _userManager;
 @{
     var user = _userManager.GetUserAsync(User).Result;
 }
