--- a/Views/Dashboard/Teachers.cshtml
+++ b/Views/Dashboard/Teachers.cshtml
@@ -20,10 +20,10 @@
         @* <img class="neo-img" src="~/images/filter.png" /> *@
         <label>Filter By: </label>
         <select name="SearchCriteria" id="searchCriteria">
-            <option value="All" selected>All</option>
-            <option value="Name">Name</option>
-            <option value="Position">Position</option>
-            <option value="Period">Period of Teaching</option>
+            <option value="all" selected>All</option>
+            <option value="name">Name</option>
+            <option value="position">Position</option>
+            <option value="period">Period of Teaching</option>
         </select>
         <form asp-action="Teachers" method="get" id="neo-search-box">
             <input id="neo-search-input" name="SearchKeyword" placeholder="Search" value="@Model.SearchKeyword" />
@@ -54,6 +54,7 @@
                 <td>@teacher.YearsOfTeaching</td>
             </tr>
         }
+
     </table>
 
 
@@ -63,38 +64,20 @@
     }
 
     <div id="neo-pagination-panel">
-        <a asp-action="Teachers" asp-route-page="@(Model.CurrentPage - 1) @prevDisabled" class="neo-previous-page"> Previous </a>
+        <a asp-action="Teachers" asp-route-page="@(Model.CurrentPage - 1) " class="neo-previous-page"> Previous </a>
         <p>Page @Model.CurrentPage of @Model.TotalPages</p>
         @if (Model.CurrentPage > 1)
         {
             <a asp-action="Teachers" asp-route-page="@(Model.CurrentPage - 1) @prevDisabled" class="neo-previous-page"> Previous </a>
         }
-        else
-        {
-            <span style="cursor:pointer" class="neo-previous-page disabled">Previous</span>
-        }
-
         @if (Model.CurrentPage < Model.TotalPages)
         {
             <a asp-action="Teachers" asp-route-page="@(Model.CurrentPage + 1) @nextDisabled" class="neo-next-page"> Next </a>
         }
         else
         {
-            <span style="cursor:pointer" class="neo-next-page disabled">Next</span>
+            <span style="cursor:pointer" class="neo-next-page">Next</span>
         }
     </div>
-@* 
-    <div id="neo-pagination-panel">
-        @if (Model.CurrentPage > 1)
-        {
-            <a asp-action="SendReward" asp-route-page="@(Model.CurrentPage - 1)" asp-route-searchString="@ViewBag.SearchString">Previous</a>
-        }
 
-        <p class="page-numb">Page @Model.CurrentPage of @Model.TotalPages</p>
-
-        @if (Model.CurrentPage < Model.TotalPages && Model.schoolTeachers.Count == 5)
-        {
-            <a asp-action="SendReward" asp-route-page="@(Model.CurrentPage + 1)" asp-route-searchString="@ViewBag.SearchString">Next</a>
-        }
-    </div> *@
 </div>
