--- a/Views/Shared/_ThumbnailPartial.cshtml
+++ b/Views/Shared/_ThumbnailPartial.cshtml
@@ -1,4 +1,6 @@
-﻿@inject UserManager<AppUser> _userManager
+﻿@using Microsoft.AspNetCore.Identity
+@using RYT.Models.Entities
+@inject UserManager<AppUser> _userManager
 @inject SignInManager<AppUser> _signInManager
 @{
     var user = _userManager.GetUserAsync(User).Result;
