Change password code implemented

--- a/Views/Dashboard/ChangePassword.cshtml
+++ b/Views/Dashboard/ChangePassword.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model ChangePasswordViewModel
+@{
     ViewData["Title"] = "Change Password";
 }
 <div class="RYTS-16-rectangle">
@@ -8,22 +9,28 @@
     </div>
 </div>
 <div class="RYTS-16-auth-container">
-
-    <Partial name="_NavEditProfilePartial" />
-
+    <div class="RYTS-16-options">
+        <p class="RYTS-16-auth-options-edit"><a asp-action="editProfile">Edit Profile</a></p>
+        <p class="RYTS-16-auth-options-edit"><a asp-action="changePassword">Change Password</a></p>
+    </div>
     <div class="RYTS-16-auth-form-area">
         <link href="c:\users\decagon\source\repos\ryt\ryt\wwwroot\css\changepasswordforstudent.css" rel="stylesheet" />
         <div class="RYTS-16-auth-form-details">
             <P class="RYTS-16-auth-edit">Change Password</P>
-            <form class="RYTS-16-auth-form-items">
-                <label>Old password</label>
-                <input type="text" placeholder="Type in old Password" />
+            <div asp-validation-summary="All"></div>
+            @if (!string.IsNullOrEmpty(ViewBag.PasswordChangeSuccess))
+            {
+                <span>@ViewBag.PasswordChangeSuccess</span>
+            }
+            <form method="post" asp-action="ChangePassword" asp-controller="Dashboard" class="RYTS-16-auth-form-items">
+                <label asp-for="OldPassword">Old password</label>
+                <input asp-for="OldPassword" type="text" placeholder="Type in old Password" />
                 <br />
-                <label>New Password</label>
-                <input type="text" placeholder="Type in new password" />
+                <label asp-for="NewPassword">New Password</label>
+                <input asp-for="NewPassword" type="text" placeholder="Type in new password" />
                 <br />
-                <label>Confirm New Password</label>
-                <input type="text" placeholder="Confirm password" />
+                <label asp-for="ConfirmPassword">Confirm New Password</label>
+                <input asp-for="ConfirmPassword" type="text" placeholder="Confirm password" />
                 <br />
 
                 <button type="submit" class="RYTS-16-save-button">Save change</button>
