I tried creating adouble step form

--- a/Views/Account/TeacherSignUpStep2.cshtml
+++ b/Views/Account/TeacherSignUpStep2.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@model TeacherSignUpStep2ViewModel
+
+@{
     ViewData["Title"] = "SignUp-Step2";
 }
 
@@ -16,35 +18,69 @@
                     <div class="ryts-11-p">
                         <p>Update your profile information</p>
                     </div>
-                    <form action="post">
+                    <form action="post" >
+                        <div class="ryts-11-input-main mb-3" style="display:none">
+                            <label for="user-name" class="mb-2">@Html.DisplayNameFor(model => model.Name)</label><br>
+                            <input type="text" class="ryts-11-input" name="user-name" placeholder="Type your full name" asp-for="Name" hidden>
+                            <div class="ryts-11-icon">
+                                <i class="uil uil-user icon"></i>
+                            </div>
+                        </div>
+                        <div class="ryts-11-input-main mb-3" style="display:none">
+                            <label for="user-email" class="mb-2">@Html.DisplayNameFor(model => model.Email)</label><br>
+                        <input type="email" class="ryts-11-input " name="user-email" placeholder="Type your email" asp-for="Email" hidden>
+                            <div class="ryts-11-icon">
+                                <i class="uil uil-envelope icon"></i>
+                            </div>
+                        </div>
+                        <div class="ryts-11-input-main mb-3" style="display:none">
+                            <label for="user-password" class="mb-2">@Html.DisplayNameFor(model => model.Password)</label><br>
+                        <input type="password" class="ryts-11-input" name="user-password" required minlength="6" placeholder="Type your password" asp-for="Password" hidden>
+                            <div class="ryts-11-icon">
+                                <img src="~/Images/ryts-11-key-alt.svg" alt="">
+                            </div>
+                        </div>
+
+                        <div class="ryts-11-input-main mb-3" style="display:none">
+                            <label for="UserType" class="mb-2">@Html.DisplayNameFor(model => model.SelectedSchool)</label><br>
+                            <select class="select-user-type ryts-11-input" placeholder="Type name of school" asp-for="SelectedSchool">
+                                <option value="Placeholder">Select name of school</option>
+                                @foreach (var school in Model.SchoolsTaught)
+                                {
+                                    <option value="@school">@school</option>
+                                }
+                            </select>
+                            <div class="ryts-11-icon">
+                                <i><img src="~/Images/ryts-11-school.svg" alt=""></i>
+                            </div>
+                        </div>
+
                         <div class="ryts-11-input-main mb-3">
                             <label for="teaching-year" class="mb-2">Years of Teaching</label><br>
-                            <input type="text" class="ryts-11-input select-user-type-single" name="teaching-year" placeholder="e.g 1993 - 2000">
+                            <input type="text" class="ryts-11-input select-user-type-single" placeholder="e.g 1993 - 2000" asp-for="YearsOfTeaching">
                             
                         </div>
                         <div class="ryts-11-input-main mb-3">
-                            <label for="subjects" class="mb-2">Subjects Taught</label><br> 
-                            <select class="select-user-type select-user-type-single ryts-11-input " name="UserType" aria-placeholder="Select" > 
-                            <option value="default">Select</option>
-                            <option value="english">English</option> 
-                            <option value="maths">Mathematics</option> 
-                            <option value="computer-science">Computer Science</option> 
-                            <option value="humanities">Humanities</option> 
-                            </select> 
+                            <label for="subjects" class="mb-2">Subjects Taught</label><br>
+                            <select class="select-user-type ryts-11-input" placeholder="Type name of subject" asp-for="SelectedSubject">
+                                <option value="Placeholder">Select name of subject</option>
+                                @foreach (var subject in Model.listOfSubjectsTaught)
+                                {
+                                    <option value="@subject">@subject</option>
+                                }
+                            </select>
                         </div>
 
                         <div class="ryts-11-input-main mb-3">
-                            <label for="school-type" class="mb-2">School Type</label><br> 
-                            <select class="select-user-type select-user-type-single ryts-11-input " name="school-type" aria-placeholder="Select" > 
-                            <option value="default">Select</option>
-                            <option value="school">Senior High School</option> 
-                            <option value="school">Senior Grammar School</option> 
-                            <option value="school">Junior High School</option>
-                            <option value="school">Secondary School</option>
-                            </select> 
-                            
+                            <label for="school-type" class="mb-2">School Type</label><br>
+                        <select class="select-user-type ryts-11-input" placeholder="Select School Type" asp-for="SelectedSchoolType">
+                            <option value="Placeholder">Select name of school Type</option>
+                            @foreach (var school in Model.listOfSchoolTypes)
+                            {
+                                <option value="@school">@school</option>
+                            }
+                        </select>
                         </div>
-
                         <div class="ryts-11-input-main mb-3">
                             <label for="upload-picture" class="mb-2">Upload NIN</label><br>
                             <input type="text" class="ryts-11-input" name="upload-picture" placeholder="Upload picture">
@@ -53,25 +89,7 @@
                             </div>
                         </div>
 
-                        <div class="ryts-11-input-main mb-3">
-                            <label for="list-school" class="mb-2">Schools where you taught</label><br>
-                            
-                            <select class="select-user-type  ryts-11-input " name="list-school" aria-placeholder="Select">
-                             <option value="school">Type name of school</option>
-                            <option value="school">Mainland Senior High School</option>
-                            <option value="school">Wesley Girls Junior Secondary School</option>
-                            <option value="school">Ebute- Metta High School</option>
-                            <option value="school">Marywood Senior Grammar School</option>
-                            <option value="school">Akoka Junior High School</option>
-                            <option value="school">Herbert Macaulay Junior Secondary School </option>
-                            </select>
-                            <div class="ryts-11-icon">
-                                <img src="~/Images/ryts-11-school.svg" alt="">
-                            </div>
-                        </div>
-
-
-                        <button class="ryts-11-form-btn" type="submit">Sign Up</button>
+                        <button class="ryts-11-form-btn" type="submit" asp-action="TeacherSignUpStep2">Sign Up</button>
                     </form>
 
                     <div class="ryts-11-line"></div>
